syntax = "proto3";

package proto;

service ReportService {
  rpc GetVideosViewCount (GetVideoReportRequest) returns (GetVideoReportResponse);
}

message GetVideoReportRequest {
  repeated int64 id = 1;
}

message VideoItem {
    int64 id = 1;
    int64 view_count = 2;
}

message GetVideoReportResponse {
  repeated VideoItem reply = 1;
}